# advanced-programming

./: .env.sample  .gitignore  LICENSE  README.md  flake.nix
market_sol/: .gitignore  Cargo.toml  README.md  logging_config.yaml  update_docs.sh
market_sol/doc/: crates.js  search-index.js  settings.html  source-files.js
market_sol/doc/bytemuck/: enum.PodCastError.html
market_sol/doc/chrono/: enum.Month.html  enum.RoundingError.html  enum.SecondsFormat.html  enum.Weekday.html  struct.Date.html  struct.DateTime.html  struct.Duration.html  struct.Months.html  struct.OutOfRangeError.html  struct.ParseMonthError.html  struct.ParseWeekdayError.html
market_sol/doc/color_quant/: struct.NeuQuant.html
market_sol/doc/core_graphics/: all.html  index.html
market_sol/doc/core_graphics_types/: all.html  index.html
market_sol/doc/core_text/: all.html  index.html  sidebar-items.js
market_sol/doc/flate2/: index.html
market_sol/doc/float_ord/: all.html  fn.sort.html  index.html  sidebar-items.js  struct.FloatOrd.html
market_sol/doc/font_kit/: all.html  index.html  sidebar-items.js
market_sol/doc/foreign_types/: struct.Opaque.html
market_sol/doc/foreign_types_shared/: struct.Opaque.html
market_sol/doc/getrandom/: struct.Error.html
market_sol/doc/gif/: enum.Block.html  enum.ColorOutput.html  enum.Decoded.html  enum.DecodingError.html  enum.DisposalMethod.html  enum.EncodingError.html  enum.Extension.html  enum.ExtensionData.html  enum.Extensions.html  enum.Repeat.html  enum.Version.html  struct.AnyExtension.html  struct.DecodeOptions.html  struct.Decoder.html  struct.DecodingFormatError.html  struct.Encoder.html  struct.Frame.html  struct.MemoryLimit.html  struct.StreamingDecoder.html
market_sol/doc/iana_time_zone/: enum.GetTimezoneError.html
market_sol/doc/image/: all.html  enum.ColorType.html  enum.DynamicImage.html  enum.ExtendedColorType.html  enum.ImageFormat.html  enum.ImageOutputFormat.html  struct.Delay.html  struct.Frame.html  struct.Frames.html  struct.ImageBuffer.html  struct.Luma.html  struct.LumaA.html  struct.Pixels.html  struct.Progress.html  struct.Rgb.html  struct.Rgba.html  struct.SubImage.html  trait.AnimationDecoder.html  trait.EncodableLayout.html  trait.ImageDecoder.html  trait.ImageDecoderRect.html  trait.ImageEncoder.html
market_sol/doc/jpeg_decoder/: enum.CodingProcess.html  enum.ColorTransform.html  enum.Error.html  enum.PixelFormat.html  enum.UnsupportedFeature.html  struct.Decoder.html  (+1 more)
market_sol/src/: README.md  banner.rs  good_lock_meta.rs  good_meta.rs  lib.rs  main.rs  market.rs  market_meta.rs  market_metadata.rs  market_test.rs  showcase.rs
market_sol/tests/: common_tests.rs
trader/: Cargo.toml  README.md
trader/data/: lock.json  trade.json
trader/src/: lib.rs  main.rs
visualizer/howie/: Cargo.toml
(+3562 files in other folders)
