[package]
name = "market_sol"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
rand_chacha = "0.3.1"
chrono = "0.4.23"
log4rs = "1.2.0"
log = "0.4.17"
unitn_market_2022 = {version = "1.0.2", registry = "kellnr"}
