[package]
name = "market_sol"
version = "1.0.2"
edition = "2021"
authors = [
  "Farouk Akhoun <farouk.akhoun@studenti.unitn.it>",
  "Adam Kaźmierczak <adam.kazmierczak@studenti.unitn.it>",
  "Gianluca Sassetti <gianluca.sassetti@studenti.unitn.it>",
  "Giacomo Zanolli <giacomo.zanolli@studenti.unitn.it>"
]
repository = "https://github.com/civts/advanced-programming"
license = "MIT"
description = "The SOL market, first part of the project for the advanced programming course 2022"
publish = ["kellnr"]

[dependencies]
rand = "0.8.5"
rand_chacha = "0.3.1"
chrono = "0.4.23"
probability = "0.20.1"
plotters = "0.3.4"
unitn_market_2022 = {version = "1.0.10", registry = "kellnr"}
