[package]
name = "trader"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
termion = "*"
chrono = "*"
rand = "0.8.5"
bfb = {version = "0.1.1", registry = "kellnr"}
doge = {version = "1.0.0", registry = "kellnr"}
Pizza-Stock-Exchange-Market = {version = "1.6.5", registry = "kellnr"}
unitn_market_2022 = {version = "1.0.10", registry = "kellnr"}
serde_json = "1.0.91"
