[package]
name = "howie"
description = "https://beacons.ai/howiethecrab"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossterm = "0.26.0"
ipc_utils = { path = "../../ipc_utils" }
nix = "0.26.2"
tui = "0.19.0"
unitn_market_2022 = { version = "1.0.10", registry = "kellnr" }
